# MULTI-OCR-SDK

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_QUALITY_GUIDE.md  CONTRIBUTING.md  LICENSE  PROJECT_SUMMARY.md  README.md  TESTING_CHECKLIST.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/: markdown-link-check-config.json
.github/workflows/: docs.yml  publish.yml  test.yml
core/: deepseek_client.py  vlm_client.py
core/basic_utils/: __init__.py  api_requester.py  base_config.py  file_processor.py  rate_limiter.py
deepseek_ocr/: __init__.py  batch.py  client.py  config.py  enums.py  exceptions.py  vlm_client.py
docs/: API_REFERENCE.md  BENCHMARKS.md
examples/: 01_basic_usage.py  02_batch_processing.py  03_rate_limiting.py  04_save_output.py  04_vlm_remote_file_usage.py  05_vlm_local_file_usage.py
examples/sample_docs/: README.md
multi_ocr/: batch.py  config.py
multi_ocr_sdk/: __init__.py  config.py  deepseek_client.py  exceptions.py  vlm_client.py
multi_ocr_sdk/basic_utils/: api_requester.py  base_config.py  basic_logger.py  file_processor.py  rate_limiter.py
tests/: __init__.py  conftest.py  test_client.py  test_config.py  test_deepseek_client.py  test_enums.py  test_exceptions.py  test_rate_limiting.py  test_vlm.py  test_vlm_client.py
