[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "deepseek-ocr"
version = "0.4.0"
description = "A simple and efficient Python SDK for DeepSeek-OCR API"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    {name = "Chengjie", email = "buledream233@gmail.com"}
]
keywords = ["ocr", "deepseek", "document-processing", "pdf", "image-to-text"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Image Recognition",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "pymupdf>=1.23.0",
    "aiohttp>=3.8.0",
    "requests>=2.28.0",
    "tqdm>=4.65.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.4.0",
    "types-requests>=2.28.0",
    "twine>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/BukeLy/DeepSeek-OCR-SDK"
Documentation = "https://github.com/BukeLy/DeepSeek-OCR-SDK#readme"
Repository = "https://github.com/BukeLy/DeepSeek-OCR-SDK"
Issues = "https://github.com/BukeLy/DeepSeek-OCR-SDK/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["deepseek_ocr*"]

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
